Add Pseudonymization Salt and SectorIdentifier (#39)
* Add Pseudonymization Salt and SectorIdentifier

* Fix tests

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -13,6 +13,8 @@ DB_MAIN_URL=postgre://postgres:postgres@localhost:5432/postgres
 DB_REPLICA_URL=postgre://postgres:postgres@localhost:5432/postgres
 
 PSEUDONYMIZATION_SALT_ENDPOINT="https://nothing-to-see-here.tld"
+PSEUDONYMIZATION_SALT="your-pseudonymization-salt"
+PSEUDONYMIZATION_SECTOR_IDENTIFIER="https://your-sector-identifier.tld"
 
 OFFERS_API_ENDPOINT="https://service-stage.vidis.schule/o/vidis-rest/v1.0"
 OFFERS_CLIENT_ID="..."
