--- a/charts/provisionierungs-api/secret.example.yaml
+++ b/charts/provisionierungs-api/secret.example.yaml
@@ -4,14 +4,14 @@ metadata:
   name: vidis-rostering-api-secrets
 type: Opaque
 stringData:
-  authClientId: "vidis-rostering-api"
-  authClientSecret: "client-secret-for-vidis-rostering-api"
-  dbMainUrl: "postgresql://postgres:postgres@postgres-service:5432/vidis_rostering"
-  dbReplicaUrl: "postgresql://postgres:postgres@postgres-service:5432/vidis_rostering"
-  offersClientId: "offers-api-client-id"
-  offersClientSecret: "offers-api-client-secret"
-  idmEduplacesClientId: "test-idp-idm-eduplaces-client-id"
-  idmEduplacesClientSecret: "test-idp-idm-eduplaces-client-secret"
-  idmEduplacesStagingClientId: "test-idp-idm-eduplaces-staging-client-id"
-  idmEduplacesStagingClientSecret: "test-idp-idm-eduplaces-staging-client-secret"
-  pseudonymizationSaltEndpoint: "https://your-pseudonymization-endpoint.example.test"
+  authClientId: 'vidis-rostering-api'
+  authClientSecret: 'client-secret-for-vidis-rostering-api'
+  dbMainUrl: 'postgresql://postgres:postgres@postgres-service:5432/vidis_rostering'
+  dbReplicaUrl: 'postgresql://postgres:postgres@postgres-service:5432/vidis_rostering'
+  offersClientId: 'offers-api-client-id'
+  offersClientSecret: 'offers-api-client-secret'
+  idmEduplacesClientId: 'test-idp-idm-eduplaces-client-id'
+  idmEduplacesClientSecret: 'test-idp-idm-eduplaces-client-secret'
+  pseudonymizationSaltEndpoint: 'https://your-pseudonymization-endpoint.example.test'
+  pseudonymizationSalt: 'your-pseudonymization-salt'
+  pseudonymizationSectorIdentifier: 'https://your-sector-identifier.example.test'
