--- a/turbo.json
+++ b/turbo.json
@@ -21,6 +21,8 @@
         "DATABASE_POOL_SIZE",
         "SESSION_SECRET",
         "PSEUDONYMIZATION_SALT_ENDPOINT",
+        "PSEUDONYMIZATION_SALT",
+        "PSEUDONYMIZATION_SECTOR_IDENTIFIER",
         "IDM_EDUPLACES_TOKEN_ENDPOINT",
         "IDM_EDUPLACES_API_ENDPOINT",
         "IDM_EDUPLACES_CLIENT_ID",
